closed token field in XML template

--- a/smart/templates/token.xml
+++ b/smart/templates/token.xml
@@ -2,7 +2,7 @@
 <AccessToken>
   <App id="{{app_email}}" />
   <Account id="{{account_email}}" />
-  <Token>{{token.token}}</Secret>
+  <Token>{{token.token}}</Token>
   <Secret>{{token.secret}}</Secret>
 </AccessToken>
 
