Allow XHR for browser-based oauth

--- a/smart/templates/phas.xml
+++ b/smart/templates/phas.xml
@@ -8,6 +8,10 @@
   <description>{{pha.description}}</description>
   <frameable>{{pha.frameable}}</frameable>
   <ui>{{pha.has_ui}}</ui>
+  {%if not pha.background_p%}
+  <consumer_key>{{pha.consumer_key}}</consumer_key>
+  <secret>{{pha.secret}}</secret>
+  {%endif%}
 </App>
 {% endfor %}
 </Apps>
