--- a/smart/templates/activity.xml
+++ b/smart/templates/activity.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Activity id="{{a.id}}">
   <name>{{a.name}}</name>
-  <app>{{a.app.email}}</app>
-  <url>{{a.url}}</url>
   <description>{{a.description}}</description>
+  <url>{{a.url}}</url>
+  <app>{{a.app.email}}</app>
+  <consumer_key>{{a.app.consumer_key}}</consumer_key>
+  <secret>{{a.app.secret}}</secret>
+
 </Activity>
 
