--- a/smart/templates/pha.xml
+++ b/smart/templates/pha.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <App id="{{pha.email}}">
-  <startURLTemplate>{{pha.start_url_template}}</startURLTemplate>
+  <startURLTemplate>{{pha.activity.url}}</startURLTemplate>
   <name>{{pha.name}}</name>
   <description>{{pha.description}}</description>
   <frameable>{{pha.frameable}}</frameable>
