--- a/smart/templates/token.xml
+++ b/smart/templates/token.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <AccessToken>
-  <App id="{{app_email}}" />
-  <Account id="{{account_email}}" />
+  <App id="{{app_email}}" />{% if account_email %}
+  <Account id="{{account_email}}" />{% endif %}{% if record_id %}
+  <Record id="{{record_id}}" />{% endif %}
   <Token>{{token.token}}</Token>
   <Secret>{{token.secret}}</Secret>
 </AccessToken>
