Re-factored query back-end for record-level data. Now explicitly manage data types as RDFObject instances/

--- a/smart/templates/_account.xml
+++ b/smart/templates/_account.xml
@@ -3,7 +3,10 @@
 {% if account.secondary_secret %}
   <secret>{{account.secondary_secret}}</secret>
 {% endif %}
-  <fullName>{{account.full_name}}</fullName>
+  <givenName>{{account.full_name}}</givenName>
+  <familyName>{{account.full_name}}</familyName>
+  <department>{{account.full_name}}</department>
+  <role>{{account.full_name}}</role>
   <contactEmail>{{account.contact_email}}</contactEmail>
   <lastLoginAt>{{account.last_login_at|check_empty|format_iso8601}}</lastLoginAt>
   <totalLoginCount>{{account.total_login_count}}</totalLoginCount>
