Return demographics to Reference EMR UI; updated i2b2 export scripts.

--- a/smart/templates/record_list.xml
+++ b/smart/templates/record_list.xml
@@ -6,6 +6,8 @@
   <firstname>{{record.fn}}</firstname>
   <lastname>{{record.ln}}</lastname>
   <dob>{{record.dob}}</dob>
+  <gender>{{record.gender}}</gender>
+  <zipcode>{{record.zipcode}}</zipcode>
   </demographics>
   </Record>
 {% endfor %}
