Introduce `standalone` flag

--- a/smart/templates/pha.xml
+++ b/smart/templates/pha.xml
@@ -3,7 +3,7 @@
   <startURLTemplate>{{pha.activity.url}}</startURLTemplate>
   <name>{{pha.name}}</name>
   <description>{{pha.description}}</description>
-  <frameable>{{pha.frameable}}</frameable>
   <ui>{{pha.has_ui}}</ui>
+  <standalone>{{pha.standalone}}</standalone>
 </App>
 
